# libsmf

./: Makefile.am  autogen.sh  configure.ac
man/: Makefile.am  libsmf-docs.xml  smfsh-ref.sgml  version.xml.in
src/: Makefile.am  smf.c  smf.h  smf_compat.c  smf_decode.c  smf_load.c  smf_private.h  smf_save.c  smf_tempo.c  smfsh.c
tests/: COPYING  Makefile.am  test_python.py
